--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
